Commit setup changes

--- a/InAndOut/appsettings.json
+++ b/InAndOut/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=InAndOut;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=DESKTOP-46FD43C\\SQLEXPRESS;Database=InAndOut;Trusted_Connection=True;MultipleActiveResultSets=True"
     //"DefaultConnection": "Server=(LocalDB)\MSSQLLocalDB;Database=InAndOut;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
 
